# Python

./: README.md
1. Project Structure/: TestPackage.py  generate distribution archive.ps1
1. Project Structure/package_demo/: README.md  pyproject.toml  setup.cfg
1. Project Structure/package_demo/src/example_package_Marc_Mertens.egg-info/: PKG-INFO  SOURCES.txt
1. Project Structure/package_demo/src/my_package/: __init__.py  my_module.py
